--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0.15.6"
-tokio = {version = "1.26.0" , features = ["rt-multi-thread"]}
+tokio = {version = "1.28.0" , features = ["rt-multi-thread" , "full"]}
 public-ip = "0.2.2"
 sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sqlite" , "macros"] }
+mc-query = "1.0.1"
 
 [dependencies.serenity]
 default-features = false
