--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ tokio = {version = "1.28.0" , features = ["rt-multi-thread" , "full"]}
 public-ip = "0.2.2"
 sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sqlite" , "macros"] }
 mc-query = "1.0.1"
+log = "0.4.20"
+env_logger = "0.10.0"
 
 [dependencies.serenity]
 default-features = false
