--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sq
 mc-query = "1.0.1"
 log = "0.4.20"
 env_logger = "0.10.0"
+rand = "0.8.5"
 
 [dependencies.serenity]
 default-features = false
