--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,25 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dotenvy = "0.15.6"
-tokio = {version = "1.28.0" , features = ["rt-multi-thread" , "full"]}
+dotenvy = "0.15.7"
+tokio = {version = "1.34.0" , features = ["rt-multi-thread" , "full"]}
+tokio-util = "0.7.10"
+axum = "0.6.20"
+axum-macros = "0.3.8"
+hyper = "1.0.1"
 public-ip = "0.2.2"
 sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sqlite" , "macros"] }
 mc-query = "1.0.1"
 log = "0.4.20"
 env_logger = "0.10.0"
 rand = "0.8.5"
+tower = "0.4.13"
+tower-http = {version = "0.4.4" , features = ["fs"]}
 
 [dependencies.serenity]
 default-features = false
 features = ["builder" , "cache" , "gateway" , "http" , "model" , "rustls_backend" , "utils" , "client" , "collector"]
-version = "0.11.6"
+version = "0.11.7"
 
 [profile.dev.package.sqlx-macros]
 opt-level = 3
