--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 dotenvy = "0.15.7"
 tokio = {version = "1.34.0" , features = ["rt-multi-thread" , "full"]}
 tokio-util = "0.7.10"
-axum = "0.6.20"
-axum-macros = "0.3.8"
-hyper = "1.0.1"
+axum = "0.7.3"
+axum-macros = "0.4.0"
+hyper = "1.1.0"
 public-ip = "0.2.2"
 sqlx = { version = "0.6.3", features = ["offline" , "runtime-tokio-rustls" , "sqlite" , "macros"] }
 mc-query = "1.0.1"
@@ -20,6 +20,7 @@ env_logger = "0.10.0"
 rand = "0.8.5"
 tower = "0.4.13"
 tower-http = {version = "0.4.4" , features = ["fs"]}
+serde = "1.0.194"
 
 [dependencies.serenity]
 default-features = false
