--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ rand = "0.8.5"
 tower = "0.4.13"
 tower-http = {version = "0.4.4" , features = ["fs"]}
 serde = "1.0.194"
+ron = "0.8.1"
+curl = "0.4.46"
 
 [dependencies.serenity]
 default-features = false
